# lab-kaggle-hub

./: .env.example  .gitignore  README.md  metrics.json  oof.csv  requirements.txt  runconfig.example.json  submission.csv
app/: main.py  pyproject.toml
app/api/: db.py  schemas.py  storage.py  ui.py
app/app/templates/: index.html  run_detail.html
app/templates/: index.html  run_detail.html
infra/: docker-compose.yml
infra/_minio/.minio.sys/: format.json
infra/sql/: 001_init.sql
kaggle/: lightgbm_classif_template.ipynb
scripts/: apply-patch.ps1  make-patch.ps1
